k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raju
  labels:
    app.kubernetes.io/name: raju
